@@ -19,6 +19,7 @@ public class PokerResultComparer {
         return result;
     }
 
+    @SuppressWarnings("unlikely-arg-type")
     private static PokerSetResult calculateResult(ISetsCard set) {
         PokerSetResult result = null;
         int order = 0;
@@ -33,7 +34,7 @@ public class PokerResultComparer {
 
         for (int i = 0; i < set.getCardSet().size(); i++) {
             GeneralCard card = set.getCardSet().get(i);
-            if(card.getColor().equals(set.getCardSet().get(0))) {
+            if(card.getColor().equals(set.getCardSet().getFirst())) {
                 flush = true;
             }
             duplicates[card.getRangindex()]++;
